--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="gradient_bg">
     <!-- Navigation Bar -->
-    <section class="container mx-auto">
+    <header class="container mx-auto">
         <nav class="flex justify-between items-center py-8 mx-auto">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
@@ -50,14 +50,14 @@
                 <ion-icon onclick="onToggleMenu(this)" name="menu"
                     class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
             </div>
-    </section>
+    </header>
 
     <!-- Hero Section -->
     <section class="container mx-auto h-[100vh] bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center rounded-none md:rounded-lg">
         <div class="flex-col mx-auto items-center justify-center w-[75%] space-y-10 lg:pt-10">
             <div class="items-center w-3/5 md:w-72 mx-auto"><img src="./Graphics/Laravel.svg" alt=""></div>
             <div class="items-center w-full mx-auto"><img src="./Graphics/Hero_Home.png" alt=""></div>
-            <div class="text-center text-4xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career
+            <div class="text-center text-2xl md:text-4xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career
                 Journey Today!</div>
             <div class="flex justify-center items-center pb-5 lg:pb-20">
                 <a class="uppercase justify-center text-center py-3 px-4 text-2xl hover:scale-110 hover:tracking-widest transition-all duration-300 ease-in-out rounded-lg text-slate-800 font-extrabold bg-[#00D897] [box-shadow:0px_8px_50px_0px_rgba(0,_216,_151,_0.50)]"
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Ista Process  -->
-    <section class=" mt-20 py-20 bg-[#00D897]">
+    <section class=" mt-20 h-full md:h-[100vh] py-20 bg-[#00D897] flex items-center">
         <div
             class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  md:flex md:flex-row md:space-x-10 md:space-y-0 md:justify-between md:items-center">
             <div
@@ -103,7 +103,7 @@
     </section>
 
     <!-- Director Word -->
-    <section class=" h-full py-48 flex items-center">
+    <section class=" h-[100vh] py-48 flex items-center container mx-auto">
           <figure class="max-w-screen-md mx-auto text-center items-center">
             <svg class="w-10 h-10 mx-auto mb-3 text-slate-400 dark:text-slate-600" aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 14">
@@ -111,7 +111,7 @@
                 d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
             </svg>
             <blockquote>
-              <p class="text-2xl italic font-medium text-slate-900 dark:text-white">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
+              <p class="text-2xl italic font-medium text-slate-800 dark:text-white">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
               to acquire knowledge and skills for successful social and professional integration.
               
               It is therefore with enthusiasm and confidence that the entire community of the Institute will continue its wonderful
@@ -235,6 +235,127 @@
                     href="#">Learn More</a></div>
         </div>
     </section>
+
+    <footer class="text-slate-600 body-font">
+        <div
+          class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+          <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+            <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
+              <img width="150px" src="./Graphics/ISTA ZENATA.png" alt="">
+            </a>
+            <p class="mt-2 text-sm text-slate-500">L'etablissement de L'ISTA ZENATA</p>
+          </div>
+          <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <div class="bg-slate-100">
+          <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+            <p class="text-slate-500 text-sm text-center sm:text-left">© 2020 Tailblocks —
+              <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-slate-600 ml-1"
+                target="_blank">@knyttneve</a>
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+              <a class="text-slate-500">
+                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+                  viewBox="0 0 24 24">
+                  <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                </svg>
+              </a>
+              <a class="ml-3 text-slate-500">
+                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+                  viewBox="0 0 24 24">
+                  <path
+                    d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                  </path>
+                </svg>
+              </a>
+              <a class="ml-3 text-slate-500">
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  class="w-5 h-5" viewBox="0 0 24 24">
+                  <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                  <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                </svg>
+              </a>
+              <a class="ml-3 text-slate-500">
+                <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0"
+                  class="w-5 h-5" viewBox="0 0 24 24">
+                  <path stroke="none"
+                    d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+                  <circle cx="4" cy="4" r="2" stroke="none"></circle>
+                </svg>
+              </a>
+            </span>
+          </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
